--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="nav-wrapper">
         <%= image_tag("ag.png", size: "70x70", alt: "AsemblyGeneral logo") %>
-        <a href="#!" class="brand-logo">AssemblyGeneral</a>
+        <a href="<%= root_path %>" class="brand-logo">AssemblyGeneral</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html">Courses</a></li>
