--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,7 +11,7 @@
 				<div class="card-panel grey lighten-5 z-depth-1">
 					<div class="row valign-wrapper">
 						<div class="col m3">
-							<%= image_tag "avatar.jpg", class: "circle responsive-img" %>
+							<%= image_tag "ag.png", class: "circle responsive-img" %>
 						</div>
 						<div class="col m9">
 							<span class="black-text">
