--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,80 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render partial: "shared/header" %>
 
-  <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">My Profiles </a></li>
-    <li><a href="#!">MY Courses</a></li>
-    <li class="divider"></li>
-    <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
-  </ul>
-
-  <ul id="dropdown2" class="dropdown-content">
-    <li><a href="#!">My Profiles </a></li>
-    <li><a href="#!">MY Courses</a></li>
-    <li class="divider"></li>
-    <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
-  </ul>
-
- <header>
-  <nav class="black lighten-4 z-depth-2">
-    <div class="container">
-      <div class="nav-wrapper">
-        <%= image_tag("ag.png", size: "70x70", alt: "AsemblyGeneral logo") %>
-        <a href="<%= root_path %>" class="brand-logo">AssemblyGeneral</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Courses</a></li>
-          <% if (!user_signed_in?) %>
-            <li><%= link_to "Sign Up", new_user_registration_path %></li>
-            <li><%= link_to "Login", new_user_session_path %></li>
-          <% else %>
-            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">User<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-          <% end %>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href="sass.html">Courses</a></li>
-          <% if (!user_signed_in?) %>
-            <li><%= link_to "Sign Up", new_user_registration_path %></li>
-            <li><%= link_to "Login", new_user_session_path %></li>
-          <% else %>
-            <li><a class="dropdown-button" href="#!"d data-activates="dropdown2">User<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-  </nav>
- </header>
+  <%= render partial: "shared/message" %>
  <main>
    <div class="container">
      <%= yield %>
    </div>
  </main>
-  <footer class="page-footer black lighten-4">
-       <div class="container">
-         <div class="row">
-           <div class="col l6 s12">
-             <h5 class="white-text">AssemblyGeneral</h5>
-             <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-           </div>
-           <div class="col l4 offset-l2 s12">
-             <h5 class="white-text">Social</h5>
-             <ul>
-               <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
-               <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
-               <li><a class="grey-text text-lighten-3" href="#!">Github</a></li>
-               <li><a class="grey-text text-lighten-3" href="#!">Linkedin</a></li>
-             </ul>
-           </div>
-         </div>
-       </div>
-       <div class="footer-copyright">
-         <div class="container">
-         © 2014 Copyright AssemblyGeneral
-         <%= link_to "About Us", pages_about_path, class:"grey-text text-lighten-4 right" %>
-         </div>
-       </div>
-     </footer>
+
+   <%= render partial: "shared/footer" %>
 </body>
 <script>
    $(".button-collapse").sideNav();
