--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,12 @@
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">My Profiles </a></li>
+  <li><%= link_to "My Profile", edit_user_registration_path %></li>
   <li><a href="#!">MY Courses</a></li>
   <li class="divider"></li>
   <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 </ul>
 
 <ul id="dropdown2" class="dropdown-content">
-  <li><a href="#!">My Profiles </a></li>
+  <li><%= link_to "My Profile", edit_user_registration_path %></li>
   <li><a href="#!">MY Courses</a></li>
   <li class="divider"></li>
   <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
@@ -25,7 +25,7 @@
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
         <% else %>
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= current_user.email %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
         <% end %>
       </ul>
       <ul class="side-nav" id="mobile-demo">
@@ -34,7 +34,7 @@
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
         <% else %>
-          <li><a class="dropdown-button" href="#!"d data-activates="dropdown2"><%= current_user.email %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+          <li><a class="dropdown-button" href="#!"d data-activates="dropdown2"><%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
         <% end %>
       </ul>
     </div>
