--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,8 +2,8 @@
   <div class="col m6 offset-m3 center">
     <h5>Edit your password</h5>
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method:  :put }) do |f| %>
-      <%= devise_error_messages! %>
-      
+      <%= render partial: "shared/devisemes" %>
+
       <% f.hidden_field :reset_password_token %>
 
       <div class="field">
