--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col m6 offset-m3 center">
 		<h5>Forgot your password?</h5>
 		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method:  :post }) do |f| %>
-      <%= devise_error_messages! %>
+      <%= render partial: "shared/devisemes" %>
 			  <div class="input-field">
 			    <%= f.email_field :email, :id => "email", autofocus: true %>
 			  </div>
