--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col m6 offset-m3 center">
     <h5>Sign up</h5>
-    
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
+      <%= render partial: "shared/devisemes" %>
 
       <div class="input-field">
         <%= f.text_field :name, autofocus: true, class: "validate", placeholder: "Name" %>
