Adding transactional emails through Mandrill API and configured ENV variables

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<h3 style="text-align:center;">About Me</h3>
+<h3 style="text-align:center;">About Us</h3>
 
 <div class="card z-depth-3">
 	<div class="card-content white-text">
