--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,12 @@
   <div class="col m6 offset-m3 center">
     <h5>Sign up</h5>
 
+    <br>
+    <%= link_to "Sign up with Google", user_omniauth_authorize_path(:google_oauth2), class: "btn red darken-1" %>
+    <br>
+    <%= link_to "Sign up with Github", user_omniauth_authorize_path(:github), class: "btn grey darken-2" %>
+    <%#= link_to "Sign up with Facebook", user_omniauth_authorize_path(:facebook), class: "btn blue darken-4" %>
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render partial: "shared/devisemes" %>
 
