--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,7 +26,7 @@
           <li><%= link_to "Login", new_user_session_path %></li>
         <% else %>
           <li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1">
-            <%= image_tag avatar_url(current_user), class:"circle responsive-img" %>&nbsp;
+            <%= image_tag avatar_url(current_user), class: "circle responsive-img image-size" %>&nbsp;
             <%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
         <% end %>
       </ul>
@@ -37,7 +37,7 @@
           <li><%= link_to "Login", new_user_session_path %></li>
         <% else %>
           <li><a class="dropdown-button valign-wrapper" href="#!"d data-activates="dropdown2">
-            <%= image_tag avatar_url(current_user), class:"circle responsive-img" %>&nbsp;
+            <%= image_tag avatar_url(current_user), class: "circle responsive-img image-size" %>&nbsp;
             <%= current_user.name %><i class="mdi-navigation-arrow-drop-down right"></i></a></li>
         <% end %>
       </ul>
