--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
  @import "materialize/components/color";
- $primary-color: color("black", "lighten-2") !default;
+ $primary-color: color("grey darken-2") !default;
  @import 'materialize';
  @import 'toastr';
 
