--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,17 +1,39 @@
-<h1><%= @course.name %></h1>
+<div class="row">
+  <div class="col m4">
+    <div class="card z-depth-2">
+      <div class="center">
+        <h1>Free</h1>
+      </div>
+      <div class="card-action center">
+        <button class="btn waves-effect waves-light red lighten-2">Register for Course</button>
+      </div>
+    </div>
+  </div>
 
+  <div class="col m8">
+    <div class="card z-depth-2">
+      <div class="card-image">
+        <%= image_tag @course.image %>
+      </div>
+      <div class="card-content grey-text text-darken-4">
+        <h5><%= @course.name %></h5>
+        <hr>
+        <%= @course.content %>
 
-<p><%= image_tag @course.image(:medium) %></p>
-
-<p><%= @course.content %></p>
-
-
-<ul>
-  <%= @lessons.each do |lesson| %>
-    <li>
-      <%= link_to [lesson.course, lesson] do %>
-        <%= lesson.note %>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+        <div class="collection">
+          <% @lessons.each do |lesson| %>
+            <% if lesson.header %>
+              <div class="collection-item active">
+                <i class="mdi-social-school"> <%= lesson.title %></i>
+              </div>
+            <% else %>
+              <%= link_to [lesson.course, lesson], class: "collection-item" do %>
+                <%= lesson.note %>
+                <% end %>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
