--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -6,7 +6,7 @@
         <h1>Free</h1>
       </div>
       <div class="card-action center">
-        <button class="btn waves-effect waves-light red lighten-2">Register for Course</button>
+        <button class="btn waves-effect waves-light red darken-2">Register for Course</button>
       </div>
     </div>
   </div>
@@ -24,7 +24,7 @@
         <div class="collection">
           <% @lessons.each do |lesson| %>
             <% if lesson.header %>
-              <div class="collection-item active">
+              <div class="collection-item active red darken-2">
                 <i class="mdi-social-school"> <%= lesson.title %></i>
               </div>
             <% else %>
