--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,13 +1,13 @@
 <ul id="dropdown1" class="dropdown-content">
   <li><%= link_to "My Profile", edit_user_registration_path %></li>
-  <li><a href="#!">My Courses</a></li>
+  <li><%= link_to "My Courses", courses_path %></li>
   <li class="divider"></li>
   <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 </ul>
 
 <ul id="dropdown2" class="dropdown-content">
   <li><%= link_to "My Profile", edit_user_registration_path %></li>
-  <li><a href="#!">My Courses</a></li>
+  <li><%= link_to "My Courses", courses_path %></li>
   <li class="divider"></li>
   <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 </ul>
@@ -20,7 +20,7 @@
       <a href="<%= root_path %>" class="brand-logo">AssemblyGeneral</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Courses</a></li>
+        <li><%= link_to "Courses", courses_path %></li>
         <% if (!user_signed_in?) %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
@@ -31,7 +31,7 @@
         <% end %>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="#">Courses</a></li>
+        <li><%= link_to "Courses", courses_path %></li>
         <% if (!user_signed_in?) %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
