Integrated Wistia player api and formatted lesson show view, fixed issue with turbolinks

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -21,7 +21,7 @@
         <hr>
         <%= @course.content %>
 
-        <div class="collection">
+        <div class="collection" data-no-turbolink>
           <% @lessons.each do |lesson| %>
             <% if lesson.header %>
               <div class="collection-item active red darken-2">
