--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,13 +2,6 @@
   <div class="col m6 offset-m3 center">
     <h5>Sign up</h5>
 
-    <br>
-    <%= link_to "Sign up with Google", user_omniauth_authorize_path(:google_oauth2), class: "btn red darken-1" %>
-    <br>
-    <%= link_to "Sign up with Github", user_omniauth_authorize_path(:github), class: "btn grey darken-2" %>
-    <br>
-    <%= link_to "Sign up with LinkedIn", user_omniauth_authorize_path(:linkedin), class: "btn blue darken-3" %>
-
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render partial: "shared/devisemes" %>
 
@@ -26,5 +19,13 @@
 
       <button class="btn waves-effect waves-light" type="submit" name="action">Sign Up</button>
     <% end %>
+    <p>
+      OR
+    </p>
+    <div id="buttons">
+      <%= link_to "Sign up with Google", user_omniauth_authorize_path(:google_oauth2), class: "btn red darken-1" %><br>
+      <%= link_to "Sign up with Github", user_omniauth_authorize_path(:github), class: "btn grey darken-2" %><br>
+      <%= link_to "Sign up with LinkedIn", user_omniauth_authorize_path(:linkedin), class: "btn blue darken-3" %>
+    </div>
   </div>
 </div>
