--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,10 @@
        <div class="row">
          <div class="col l6 s12">
            <h5 class="white-text">AssemblyGeneral</h5>
-           <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+           <p class="grey-text text-lighten-4">
+             We aim to create a global community of individuals empowered to pursue work they love, by offering free courses, classes, workshops, and mini-lessons
+             on the most relevant skills of the 21st century. Hatched from the summer full immersive session in 2015 as an innovative platform for entrepreneurs, builders, designers, educators, innovators,
+             Assembly General is an community that transforms thinkers into creators through education in technology around the world.</p>
          </div>
          <div class="col l4 offset-l2 s12">
            <h5 class="white-text">Social</h5>
