Added my courses page refactored views, stylesheets to fix work arounds

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
   main {
     flex: 1 0 auto;
   }
+
   .image-size {
     width: 38px;
     height: 38px;
@@ -30,3 +31,11 @@
  #buttons {
    display: inline-block
  }
+
+.avatar-small {
+  width: 50px;
+}
+
+.avatar-medium {
+  width: 80px;
+}
