--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -11,7 +11,7 @@
               </div>
             <% else %>
               <%= link_to [lesson.course, lesson], class: "collection-item grey-text text-darken-4" do %>
-                <%= lesson.title %>
+                <%= lesson.note %>
               <% end %>
             <% end %>
           <% end %>
