Link and title fixes

--- a/app/views/courses/list.html.erb
+++ b/app/views/courses/list.html.erb
@@ -1,5 +1,5 @@
 
-<h1  class="banner center ">Available Courses</h1>
+<h1  class="banner center ">My Courses</h1>
 <div class="row">
 <br>
 	<% @courses.each do |course| %>
