--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1  class="banner center ">Available Courses</h1>
-<div class="row">
+<div class="row" data-no-turbolink>
 <br>
 	<% @courses.each do |course| %>
 		<%= link_to course do %>
