--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -40,23 +40,42 @@
       <div class="card-image">
         <%= image_tag @course.image %>
       </div>
-      <div class="card-content grey-text text-darken-4">
-        <h5><%= @course.name %></h5>
-        <hr>
-        <%= @course.content %>
 
-        <div class="collection" data-no-turbolink>
-          <% @lessons.each do |lesson| %>
-            <% if lesson.header %>
-              <div class="collection-item active red darken-2">
-                <i class="mdi-social-school"> <%= lesson.title %></i>
-              </div>
-            <% else %>
-              <%= link_to [lesson.course, lesson], class: "collection-item" do %>
-                <%= lesson.note %>
-                <% end %>
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs">
+            <li class="tab col s3"><a class="active" href="#about">About</a></li>
+            <li class="tab col s3"><a href="#curriculum">Curriculum</a></li>
+            <li class="tab col s3"><a href="#discussion">Discussion</a></li>
+          </ul>
+        </div>
+
+        <div id="about" class="col s12">
+          <div class="card-content grey-text text-darken-4">
+            <h5><%= @course.name %></h5>
+            <hr>
+            <%= @course.content %>
+          </div>
+        </div>
+
+        <div id="curriculum" class="col s10 offset-s1">
+          <div class="collection" data-no-turbolink>
+            <% @lessons.each do |lesson| %>
+              <% if lesson.header %>
+                <div class="collection-item active red darken-2">
+                  <i class="mdi-social-school"> <%= lesson.title %></i>
+                </div>
+              <% else %>
+                <%= link_to [lesson.course, lesson], class: "collection-item" do %>
+                  <%= lesson.note %>
+                  <% end %>
+              <% end %>
             <% end %>
-          <% end %>
+          </div>
+        </div>
+
+        <div id="discussion" class="col s12">
+           <p> disqus widget will go here </p>
         </div>
       </div>
     </div>
