--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,10 +15,10 @@
 						</div>
 						<div class="col m9">
 							<span class="black-text">
-								AssemblyGeneral believes that inspiration and creativity lives inside everyone. Our goal is to help awaken that passsion to achieve your dreams.
+								Assembly General believes that inspiration and creativity lives inside everyone. Our goal is to help awaken that passsion to achieve your dreams.
 
 								We aim to create a global community of individuals empowered to pursue work they love, by offering free courses, classes, workshops, and mini-lessons
-								on the most relevant skills of the 21st century. Hatched from the summer full immersive session in 2015 as an innovative platform for founders, entrepreneurs, builders, designers, educators, and innovators,
+								on the most relevant skills of the 21st century. Hatched from the summer web development full immersion batch as an innovative platform for founders, entrepreneurs, builders, designers, educators, and pioneers,
 								Assembly General is an community that transforms thinkers into creators through education in technology around the world.
 							</span>
 						</div>
