--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,14 @@
  @import 'materialize';
  @import 'toastr';
 
-.logo {
-  width: 30x30;
-}
+ html {
+  //  font-family: GillSans, Calibri, Trebuchet, sans-serif;
+  // font-weight: bold;
+  // font-style: italic;
+ }
+
+
+
  body {
     display: flex;
     min-height: 100vh;
