--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,8 +16,9 @@
 <nav class="black lighten-4 z-depth-2">
   <div class="container">
     <div class="nav-wrapper">
-      <%= image_tag("ag.png", size: "80x70", alt: "Asembly General logo") %>
-      <a href="<%= root_path %>" class="brand-logo">Assembly General</a>
+      <%= link_to root_path do %>
+        <%= image_tag("aglogo.png", size: "350x150", alt: "Asembly General logo") %>
+      <% end %>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       <ul class="right hide-on-med-and-down">
         <li><%= link_to "Courses", root_path %></li>
