--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,7 +7,16 @@
   // font-style: italic;
  }
 
-
+#courses-nav {
+  font-size: 4rem;
+}
+.nav-links > a {
+  font-size: 20px;
+  font-weight: bold;
+}
+.nav-links > a:hover {
+  color: red;
+}
 
  body {
     display: flex;
