--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,10 +21,13 @@
       <% end %>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       <ul class="right hide-on-med-and-down">
-        <li><%= link_to "Courses", root_path %></li>
+        <li class="nav-links"><%= link_to root_path do %>
+            <i id="courses-nav" class="large material-icons">view list</i>
+          <% end %>
+        </li>
         <% if (!user_signed_in?) %>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
-          <li><%= link_to "Login", new_user_session_path %></li>
+          <li class="nav-links"><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li class="nav-links"><%= link_to "Login", new_user_session_path %></li>
         <% else %>
           <li><a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1">
             <%= image_tag avatar_url(current_user), class: "circle responsive-img avatar-small" %>&nbsp;
@@ -32,7 +35,10 @@
         <% end %>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><%= link_to "Courses", root_path %></li>
+        <li><%= link_to root_path do %>
+            <i id="courses-nav" class="large material-icons">view list</i>
+          <% end %>
+        </li>
         <% if (!user_signed_in?) %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
