Fixing noticed errors with deploy

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
            <h5 class="white-text">AssemblyGeneral</h5>
            <p class="grey-text text-lighten-4">
              We aim to create a global community of individuals empowered to pursue work they love, by offering free courses, classes, workshops, and mini-lessons
-             on the most relevant skills of the 21st century. Hatched from the summer full immersive session in 2015 as an innovative platform for entrepreneurs, builders, designers, educators, innovators,
+             on the most relevant skills of the 21st century. Hatched from the summer full immersive session in 2015 as an innovative platform for entrepreneurs, builders, designers, educators, and pioneers,
              Assembly General is an community that transforms thinkers into creators through education in technology around the world.</p>
          </div>
          <div class="col l4 offset-l2 s12">
@@ -21,7 +21,7 @@
      </div>
      <div class="footer-copyright">
        <div class="container">
-       © 2014 Copyright AssemblyGeneral
+       © 2015 Copyright AssemblyGeneral
        <%= link_to "About Us", pages_about_path, class:"grey-text text-lighten-4 right" %>
        </div>
      </div>
